--- a/Frontend/src/app/property/property-card/property-card.component.html
+++ b/Frontend/src/app/property/property-card/property-card.component.html
@@ -1,12 +1,8 @@
-<div >
-    <div class="shadow-lg col-sm-4 p-3">
-      <div class="card" >
-        <img class="propImg" src="assets/images/house_default.jpg">
-        <div class="card-body p-2">
-          <h1>{{Property.Name}}</h1>
-          <h1>{{Property.Type}}</h1>
-          <h2>{{Property.Price}}</h2>
-        </div>
-      </div>
-    </div>
+<div class="card">
+  <img class="propImg" src="assets/images/house_default.jpg" />
+  <div class="card-body p-2">
+    <h1>{{ property.Name }}</h1>
+    <h2>{{ property.Type }}</h2>
+    <h3>{{ property.Price }}</h3>
+  </div>
 </div>
