--- a/Frontend/src/app/property/property-card/property-card.component.css
+++ b/Frontend/src/app/property/property-card/property-card.component.css
@@ -1,4 +1,42 @@
-h1 {font-weight:normal;}
-.propImg{
- height: 280px; ;
+h1 {
+  font-weight: normal;
+}
+
+.card-img-wrapper {
+  overflow: hidden;
+}
+
+.card:hover img {
+  transform: scale(1.2, 1.2);
+  transition-duration: 500ms;
+  transition-timing-function: ease-out;
+  height: 250px;
+  opacity: .5;
+}
+
+.card img {
+  transform: scale(1, 1);
+  transition-duration: 500ms;
+  transition-timing-function: ease-out;
+  height: 250px;
+}
+
+.member-icons
+{
+  position: absolute;
+  bottom: -30%;
+  left: 0;
+  right: 0;
+  margin-right: auto;
+  margin-left: auto;
+  opacity: 0;
+}
+
+.card-img-wrapper:hover .member-icons{
+  bottom: 50%;
+  opacity: 1;
+}
+
+.animate{
+  transition: all 0.3s ease-in-out;
 }
