--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-nav-bar></app-nav-bar>
 <div class="container" style="margin-top: 70px;">
-  <app-property-list></app-property-list>
+  <!-- <app-property-list></app-property-list> -->
+  <router-outlet></router-outlet>
 </div>
 
 
