--- a/Frontend/src/app/property/property-card/property-card.component.html
+++ b/Frontend/src/app/property/property-card/property-card.component.html
@@ -1,6 +1,7 @@
 <div class="card">
   <div class="card-img-wrapper">
-    <img class="card-img-top" src="assets/images/house_default.jpg" />
+    <img *ngIf="property.Image" class="card-img-top" src="assets/images/{{property.Image}}.jpg" />
+    <img *ngIf="!property.Image" class="card-img-top" src="assets/images/house_default.jpg" />
     <ul class="list-inline text-center member-icons animate">
       <li class="list-inline-item">
         <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i class="fa-regular fa-pen-to-square"></i></button>
