--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -16,10 +16,17 @@
           <a class="nav-link" routerLinkActive="active" routerLink="/add-property">List Property (Free)</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+<div>
+  <ul class="nav navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active" routerLink="user/register">Register</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active" routerLink="user/login">Login</a>
+    </li>
+
+  </ul>
+</div>
     </div>
   </div>
 </nav>
