--- a/Frontend/src/app/user/user-register/user-register.component.html
+++ b/Frontend/src/app/user/user-register/user-register.component.html
@@ -9,7 +9,7 @@
         <div class="form-group col-12">
             <label for="name" class="form-label">Name</label>
             <input type="text" class="form-control" formControlName="userName">
-            <span *ngIf="!userName.valid && userName.touched" class="error-block">
+            <span *ngIf="!userName.valid && (userName.touched || userSubmitted)" class="error-block">
               Please provide name
             </span>
         </div>
@@ -17,7 +17,7 @@
         <div class="form-group col-12">
           <label for="email" class="form-label">Email</label>
           <input type="text" class="form-control" formControlName="email"  >
-          <span *ngIf="!email.valid && userName.touched" class="error-block">
+          <span *ngIf="!email.valid && (email.touched || userSubmitted)" class="error-block">
             <span *ngIf="email.hasError('required')">
             Please provide email id
           </span>
@@ -30,7 +30,7 @@
         <div class="form-group col-12">
           <label for="passwrod" class="form-label">Password</label>
           <input type="text" class="form-control" formControlName="password">
-          <span *ngIf="password.invalid && password.touched" class="error-block">
+          <span *ngIf="password.invalid && (password.touched || userSubmitted)" class="error-block">
             <span *ngIf="password.errors && password.errors['required']">
             Please provide Passowrd
           </span>
@@ -43,7 +43,7 @@
         <div class="form-group col-12">
           <label for="cpassword" class="form-label">Confirm Password</label>
           <input type="text" class="form-control" formControlName="confirmPassword">
-          <span *ngIf="confirmPassword.invalid && confirmPassword.touched" class="error-block">
+          <span *ngIf="confirmPassword.invalid && (confirmPassword.touched || userSubmitted)" class="error-block">
             <span *ngIf="confirmPassword.errors && confirmPassword.errors['required']">
             Please confirm Passowrd
           </span>
@@ -56,6 +56,9 @@
         <div class="form-group col-12">
           <label for="mobile" class="form-label">Mobile</label>
           <input type="text" class="form-control" formControlName="mobile">
+          <span *ngIf="!mobile.valid && (mobile.touched || userSubmitted)" class="error-block">
+            Please provide mobile
+          </span>
         </div>
 
         <div class="form-group col-12">
@@ -63,8 +66,6 @@
           <button type="reset" class="btn btn-secondary m-lg-2">Cancel</button>
         </div>
 
-        Form Values : {{registerationForm.value | json}} <br/>
-        Form Status : {{registerationForm.valid}}
       </form>
     </div>
   </div>
