--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -1,35 +1,278 @@
+<div class="row mb-5">
+  <div class="col-8 shadow-lg p-0 bg-white">
 <div class="card">
-<div class="card-header">
-  Add New Property
+  <div class="card-header">
+    <h3>List your Property</h3></div>
+  <div class="card-body">
+    <form (ngSubmit)="onSubmit()" #Form="ngForm">
+      <div class="tab-panel">
+        <tabset class="member-tabset" #staticTabs>
+          <tab heading="Basic Information">
+            <div class="form-group col-12">
+              <p>I want to</p>
+              <div class="btn-group" btnRadioGroup>
+                <label class="btn btn-outline-primary mr-2" tabindex="0" btnRadio=1 role="button"
+                name="SellRent">Sell</label>
+                <label class="btn btn-outline-primary"  tabindex="0" btnRadio=2 role="button"
+                name="SellRent">Rent</label>
+              </div>
+              </div>
+
+              <div class="form-group col-12">
+                <p>BHK</p>
+                <div class="btn-group" btnRadioGroup>
+                  <label *ngFor="let bhk of ['1','2','3','4']" tabindex="0" class="btn btn-outline-primary mr-2" btnRadio="{{bhk}}" role="button"
+                  name="SellRent">{{bhk}}</label>
+
+                </div>
+                </div>
+
+
+            <div class="form-group col-12">
+              <p>Property Type</p>
+              <div class="btn-group" btnRadioGroup name="propType"
+              [(ngModel)]="propertyView.PType">
+                <label *ngFor="let ptype of propertyTypes" tabindex="0" class="btn btn-outline-primary mr-2" btnRadio="{{ptype}}" role="button"
+                name="SellRent">{{ptype}}</label>
+
+              </div>
+              </div>
+              <div class="form-group col-12">
+                <p>Furnish Type</p>
+                <div class="btn-group" btnRadioGroup>
+                  <label *ngFor="let ftype of furnishTypes" tabindex="0" class="btn btn-outline-primary mr-2" btnRadio="{{ftype}}" role="button"
+                  name="SellRent">{{ftype}}</label>
+
+                </div>
+                </div>
+                <div class="form-group col-12">
+                  <label for="name">in Building/Society/Project</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    #propName="ngModel"
+                    ngModel
+                    name="Name"
+                    required
+                    minlength="5"
+                    [(ngModel)]="propertyView.Name"
+                  />
+                  <span
+                    *ngIf="!propName.valid && propName.touched"
+                    class="error-block"
+                  >
+                    <span *ngIf="propName.hasError('required')">
+                      Please provide name</span
+                    >
+                    <span *ngIf="propName.hasError('minlength')">
+                      Name must be 5 chars long</span
+                    >
+                  </span>
+                </div>
+            <div class="form-group col-12">
+              <label for="price">City</label>
+              <input type="text" class="form-control"  />
+            </div>
+
+            <div class="form-group  d-grid">
+              <button
+                type="button"
+                class="btn btn-primary btn-"
+                (click)="selectTab(1)"
+              >
+                Next
+              </button>
+            </div>
+          </tab>
+          <tab heading="Pricing and Area">
+            <div class="form-group col-12">
+              <label>Price (in USD)</label>
+              <input type="text" class="form-control"  name="price" [(ngModel)]="propertyView.Price">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Security (in USD)</label>
+              <input type="text" class="form-control" />
+            </div>
+
+            <div class="form-group col-12">
+              <label>Maintenance (in USD)</label>
+              <input type="text" class="form-control" />
+            </div>
+
+            <div class="form-group col-12">
+              <label>Built Area (in Sqr Feet)</label>
+              <input type="text" class="form-control" />
+            </div>
+
+            <div class="form-group col-12">
+              <label>Carpet Area(in Sqr Feet)</label>
+              <input type="text" class="form-control" />
+            </div>
+            <div class="d-grid gap-2">
+              <button
+                type="button"
+                class="btn btn-primary"
+                (click)="selectTab(2)"
+              >
+                Next
+              </button>
+
+              <button
+                type="button"
+                class="btn btn-primary"
+                (click)="selectTab(0)"
+              >
+                Back
+              </button>
+            </div>
+          </tab>
+          <tab heading="Address">
+            <div class="form-group col-12">
+              <label>Floor</label>
+              <input type="text" class="form-control" />
+            </div>
+
+            <div class="form-group col-12">
+              <label>Total Floor</label>
+              <input type="text" class="form-control" />
+            </div>
+
+            <div class="form-group col-12">
+              <label>Address</label>
+              <input type="text" class="form-control" />
+            </div>
+
+            <div class="form-group col-12">
+              <label>Landmark</label>
+              <input type="text" class="form-control" />
+            </div>
+            <div class="d-grid gap-2">
+              <button
+                type="button"
+                class="btn btn-primary btn-"
+                (click)="selectTab(3)"
+              >
+                Next
+              </button>
+
+              <button
+                type="button"
+                class="btn btn-primary btn-"
+                (click)="selectTab(1)"
+              >
+                Back
+              </button>
+            </div>
+          </tab>
+          <tab heading="Other Details">
+            <div class="form-group col-12">
+              <label>Ready to Move</label><br />
+              <input type="radio" id="Yes" value="1" name="RTM" />
+              <label class="m-2">Yes</label>
+
+              <input type="radio" id="No" value="2" name="RTM" />
+              <label class="m-2">No</label>
+            </div>
+
+            <div class="form-group col-3">
+              <label>Possession/Avaialble From</label>
+              <input type="text"
+              placeholder="Datepicker"
+              class="form-control"
+              bsDatepicker [bsConfig]="{containerClass:'theme-dark-blue' ,dateInputFormat: 'DD-MM-YYYY'}">
+            </div>
+
+            <div class="form-group col-12">
+              <label>Age of Property</label>
+              <input type="text" class="form-control" />
+            </div>
+
+            <div class="form-group col-12">
+              <p>Gated Community</p>
+              <div class="btn-group" btnRadioGroup>
+                <label *ngFor="let gt of ['Yes','No']" tabindex="0" class="btn btn-outline-primary mr-2" btnRadio="{{gt}}" role="button"
+                name="SellRent">{{gt}}</label>
+
+              </div>
+            </div>
+
+            <div class="form-group col-12">
+              <p>Ready To Move</p>
+              <div class="btn-group" btnRadioGroup>
+                <label *ngFor="let rtm of ['Yes','No']" tabindex="0" class="btn btn-outline-primary mr-2" btnRadio="{{rtm}}" role="button"
+                name="SellRent">{{rtm}}</label>
+
+              </div>
+            </div>
+
+            <div class="form-group col-12">
+              <label>Description</label>
+              <textarea type="text" class="form-control" rows="6"></textarea>
+            </div>
+            <div class="d-grid gap-2">
+              <button
+                type="button"
+                class="btn btn-primary"
+                (click)="selectTab(4)"
+              >
+                Next
+              </button>
+
+              <button
+                type="button"
+                class="btn btn-primary"
+                (click)="selectTab(2)"
+              >
+                Back
+              </button>
+            </div>
+          </tab>
+          <tab heading="Photos">
+            <div class="form-group col-12">
+              <div class="photo-control">
+                  <button class="mt-5" type="button">Upload</button> <br>
+                  This is under construction
+              </div>
+            </div>
+            <div class="d-grid gap-2">
+              <button
+                type="button"
+                class="btn btn-primary"
+                (click)="selectTab(3)"
+              >
+                Back
+              </button>
+              <button
+              type="reset"
+              class="btn btn-primary"
+
+            >
+              Cancel
+            </button>
+              <button
+              type="submit"
+              class="btn btn-primary"
+
+            >
+              Save
+            </button>
+
+            </div>
+          </tab>
+        </tabset>
+      </div>
+    </form>
+  </div>
 </div>
-<div class="card-body">
-<form (ngSubmit)="onSubmit()" #Form="ngForm" >
-  <div class="form-group col-12">
-    <label for="name">Name</label>
-    <input type="text" class="form-control" #propName="ngModel"
-    ngModel name="Name" required minlength="5">
-    <span *ngIf="!propName.valid && propName.touched " class="error-block">
-      <span *ngIf="propName.hasError('required')">  Please provide name</span>
-      <span *ngIf="propName.hasError('minlength')">  Name must be 5 chars long</span>
-    </span>
+</div>
+<div class="col-4 ">
+  <div class="card card-header">
+  <h3>Your Property Preview</h3>
+</div>
+  <div class="shadow-lg p-3 bg-white">
+    <app-property-card [property]="propertyView" [hideIcons]="true"></app-property-card>
   </div>
-
-  <div class="form-group col-12">
-    <label for="type">Type</label>
-    <input type="text" class="form-control" ngModel name="Type">
-  </div>
-
-
-  <div class="form-group col-12">
-    <label for="price">Price</label>
-    <input type="text" class="form-control" ngModel name="Price">
-  </div>
-
-  <div class="form-group col-12">
-    <button  type="submit" class="btn btn-primary me-2">Save</button>
-    <button type="reset" class="btn btn-primary">Cancel</button>
-  </div>
-</form>
 
 </div>
 </div>
