--- a/Frontend/src/app/property/property-card/property-card.component.css
+++ b/Frontend/src/app/property/property-card/property-card.component.css
@@ -4,10 +4,19 @@ h1 {
 .card{
   min-height: 400px;
 }
+
+.card-body h1{
+  font-family: fantasy;
+  color: #0069d9;
+}
 .card-img-wrapper {
   overflow: hidden;
 }
 
+.font-highlight {
+  font-style: italic;
+  color: red;
+}
 .card:hover img {
   transform: scale(1.2, 1.2);
   transition-duration: 500ms;
