Changes in Add Property

--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -23,32 +23,34 @@
 
               <div class="form-group col-12">
                 <p>BHK</p>
-                <div class="btn-group" btnRadioGroup
-                [(ngModel)]="propertyView.BHK" name="BHK" [ngModelOptions]="{standalone:true}">
+                <div class="btn-group" btnRadioGroup  formControlName="BHK"
+                [(ngModel)]="propertyView.BHK" name="BHK" >
                   <label *ngFor="let bhk of ['1','2','3','4']" tabindex="0" class="btn btn-outline-primary mr-2" btnRadio="{{bhk}}" role="button"
-                  name="SellRent">{{bhk}}</label>
+                  name="BHK">{{bhk}}</label>
 
                 </div>
+                  <div class="error-block" *ngIf="BHK.invalid && NextClicked"> Please select BHK</div>
                 </div>
 
 
             <div class="form-group col-12">
               <p>Property Type</p>
-              <div class="btn-group" btnRadioGroup formControlName="pType"
-            >
+              <div class="btn-group" btnRadioGroup formControlName="pType">
                 <label *ngFor="let ptype of propertyTypes" tabindex="0" class="btn btn-outline-primary mr-2" btnRadio="{{ptype}}" role="button"
                 name="SellRent">{{ptype}}</label>
-
               </div>
+              <div class="error-block" *ngIf="pType.invalid && NextClicked"> Please select Property Type</div>
               </div>
               <div class="form-group col-12">
                 <p>Furnish Type</p>
                 <div class="btn-group" btnRadioGroup
-                [(ngModel)]="propertyView.FType" name="FType" [ngModelOptions]="{standalone:true}">
+                [(ngModel)]="propertyView.FType" name="FType" formControlName="FType">
                   <label *ngFor="let ftype of furnishTypes" tabindex="0" class="btn btn-outline-primary mr-2" btnRadio="{{ftype}}" role="button"
                   name="SellRent">{{ftype}}</label>
 
                 </div>
+                <div class="error-block" *ngIf="FType.invalid && NextClicked"> Please select furnishing  type</div>
+
                 </div>
                 <div class="form-group col-12">
                   <label for="name">in Building/Society/Project</label>
@@ -61,21 +63,17 @@
                     minlength="5"
 
                   />
-                  <span
-
-                    class="error-block"
-                  >
-                    <span >
-                      Please provide name</span
-                    >
-                    <span >
-                      Name must be 5 chars long</span
-                    >
-                  </span>
+                  <div class="error-block" *ngIf="Name.invalid && (NextClicked || Name.touched)">
+                    Please select building, society or project name
+                  </div>
                 </div>
             <div class="form-group col-12">
               <label for="price">City</label>
-              <input type="text" class="form-control"  [(ngModel)]="propertyView.City" name="City" [ngModelOptions]="{standalone:true}"  />
+              <input type="text" class="form-control"  [(ngModel)]="propertyView.City" name="City" formControlName="City"  />
+              <div class="error-block"
+              *ngIf="City.invalid && (NextClicked || City.touched)">
+                Please select city
+              </div>
             </div>
 
             <div class="form-group  d-grid">
@@ -90,15 +88,22 @@
           </tab>
           <tab heading="Pricing and Area" formGroupName="PriceInfo">
             <div class="form-group col-12">
-              <label>Price (in USD)</label>
+              <label *ngIf="SellRent.value==1">Price (in USD)</label>
+              <label *ngIf="SellRent.value==2">Rent (in USD)</label>
               <input type="text" class="form-control"  formControlName="Price" >
+              <div class="error-block"
+              *ngIf="Price.invalid && (NextClicked || Price.touched)">
+                Please select
+                <span *ngIf="SellRent.value==1;else ShowRent">price</span>
+                <ng-template #ShowRent>rent</ng-template>
+              </div>
             </div>
-
+            <div *ngIf="SellRent.value==2">
             <div class="form-group col-12">
               <label>Security (in USD)</label>
               <input type="text" class="form-control" />
             </div>
-
+          </div>
             <div class="form-group col-12">
               <label>Maintenance (in USD)</label>
               <input type="text" class="form-control" />
@@ -107,17 +112,21 @@
             <div class="form-group col-12">
               <label>Built Area (in Sqr Feet)</label>
               <input type="text" class="form-control"  formControlName="BuiltArea" />
+              <div class="error-block"
+              *ngIf="BuiltArea.invalid && NextClicked">
+                Please select built up area
+              </div>
             </div>
 
             <div class="form-group col-12">
               <label>Carpet Area(in Sqr Feet)</label>
-              <input type="text" class="form-control" />
+              <input type="text" class="form-control"  formControlName="CarpetArea" />
             </div>
             <div class="d-grid gap-2">
               <button
                 type="button"
                 class="btn btn-primary"
-                (click)="selectTab(2, BasicInfo.valid)"
+                (click)="selectTab(2, PriceInfo.valid)"
               >
                 Next
               </button>
@@ -125,37 +134,41 @@
               <button
                 type="button"
                 class="btn btn-primary"
-                (click)="selectTab(0, BasicInfo.valid)"
+                (click)="selectTab(0, PriceInfo.valid)"
               >
                 Back
               </button>
             </div>
           </tab>
-          <tab heading="Address">
+          <tab heading="Address" formGroupName="AddressInfo">
             <div class="form-group col-12">
               <label>Floor</label>
-              <input type="text" class="form-control" />
+              <input type="text" class="form-control"  formControlName="FloorNo" />
             </div>
 
             <div class="form-group col-12">
               <label>Total Floor</label>
-              <input type="text" class="form-control" />
+              <input type="text" class="form-control" formControlName="TotalFloor" />
             </div>
 
             <div class="form-group col-12">
               <label>Address</label>
-              <input type="text" class="form-control" />
+              <input type="text" class="form-control" formControlName="Address"/>
+              <div class="error-block"
+              *ngIf="Address.invalid && (NextClicked || Address.touched)">
+                Please select address
+              </div>
             </div>
 
             <div class="form-group col-12">
               <label>Landmark</label>
-              <input type="text" class="form-control" />
+              <input type="text" class="form-control" formControlName="LandMark" />
             </div>
             <div class="d-grid gap-2">
               <button
                 type="button"
                 class="btn btn-primary btn-"
-                (click)="selectTab(3, BasicInfo.valid)"
+                (click)="selectTab(3, AddressInfo.valid)"
               >
                 Next
               </button>
@@ -163,62 +176,74 @@
               <button
                 type="button"
                 class="btn btn-primary btn-"
-                (click)="selectTab(1, BasicInfo.valid)"
+                (click)="selectTab(1, AddressInfo.valid)"
               >
                 Back
               </button>
             </div>
           </tab>
-          <tab heading="Other Details">
+          <tab heading="Other Details" formGroupName="OtherInfo">
             <div class="form-group col-12">
               <label>Ready to Move</label><br />
-              <input type="radio" id="Yes" value="1" name="RTM" />
-              <label class="m-2">Yes</label>
 
-              <input type="radio" id="No" value="2" name="RTM" />
-              <label class="m-2">No</label>
+              <div class="btn-group" btnRadioGroup
+                  formControlName="RTM">
+                    <label class="btn btn-outline-primary mr-2"
+                      btnRadio=1 tabindex="0" role="button"
+                      name="RTM">Yes
+                    </label>
+
+                    <label class="btn btn-outline-primary"
+                      btnRadio=2  tabindex="0" role="button"
+                      name="RTM">No
+                    </label>
+                  </div>
+                  <div class="error-block" *ngIf="RTM.invalid && NextClicked">
+                    Please select ready to move
+                  </div>
             </div>
 
-            <div class="form-group col-3">
+            <div class="form-group col-6"  *ngIf="RTM.value==2">
               <label>Possession/Avaialble From</label>
               <input type="text"
               placeholder="Datepicker"
-              class="form-control"
+              class="form-control"   formControlName="PossesionOn"
               bsDatepicker [bsConfig]="{containerClass:'theme-dark-blue' ,dateInputFormat: 'DD-MM-YYYY'}">
             </div>
 
-            <div class="form-group col-12">
+            <div class="form-group col-3" *ngIf="RTM.value==1">
               <label>Age of Property</label>
-              <input type="text" class="form-control" />
+              <input type="text" class="form-control" formControlName="AOP"/>
             </div>
 
             <div class="form-group col-12">
               <p>Gated Community</p>
-              <div class="btn-group" btnRadioGroup>
+              <div class="btn-group" btnRadioGroup  formControlName="Gated">
                 <label *ngFor="let gt of ['Yes','No']" tabindex="0" class="btn btn-outline-primary mr-2" btnRadio="{{gt}}" role="button"
-                name="SellRent">{{gt}}</label>
+                name="Gated">{{gt}}</label>
 
               </div>
             </div>
 
             <div class="form-group col-12">
-              <p>Ready To Move</p>
-              <div class="btn-group" btnRadioGroup>
+              <p>Main Entrance</p>
+              <div class="btn-group" btnRadioGroup
+              formControlName="MainEntrance">
                 <label *ngFor="let rtm of ['Yes','No']" tabindex="0" class="btn btn-outline-primary mr-2" btnRadio="{{rtm}}" role="button"
-                name="SellRent">{{rtm}}</label>
+                name="Entrance">{{rtm}}</label>
 
               </div>
             </div>
 
             <div class="form-group col-12">
               <label>Description</label>
-              <textarea type="text" class="form-control" rows="6"></textarea>
+              <textarea type="text" class="form-control" rows="6"  formControlName="Description"></textarea>
             </div>
             <div class="d-grid gap-2">
               <button
                 type="button"
                 class="btn btn-primary"
-                (click)="selectTab(4, BasicInfo.valid)"
+                (click)="selectTab(4, OtherInfo.valid)"
               >
                 Next
               </button>
@@ -226,7 +251,7 @@
               <button
                 type="button"
                 class="btn btn-primary"
-                (click)="selectTab(2, BasicInfo.valid)"
+                (click)="selectTab(2, OtherInfo.valid)"
               >
                 Back
               </button>
