--- a/Frontend/src/app/property/property-card/property-card.component.html
+++ b/Frontend/src/app/property/property-card/property-card.component.html
@@ -12,7 +12,7 @@
     </ul>
   </div>
   <div class="card-body p-1">
-    <h1 class="mb-0">{{property.BHK}} BHK {{property.PType}}</h1>
+    <h1 class="mb-0">{{property.BHK}} BHK {{property.pType}}</h1>
 
     in {{property.Name}}
     <span *ngIf="property.Name">,</span>
